[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-yie1d"
version = "0.1.0"
description = "Command line for brute force password attacking"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.8"
dependencies = []

# Optional metadata - classifiers help users find your project
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

# Add a console script so users get a CLI command when installing
[project.scripts]
# The left side is the command installed to PATH. The right side is module:callable
infinite-yie1d = "infinite_yie1d.cli:main"